Iconos arreglados y paneles agrandados

--- a/ProyectoInicial/bin/.gitignore
+++ b/ProyectoInicial/bin/.gitignore
@@ -1,6 +1,8 @@
-/Fondo.png
-/Letras Historia.png
-/LogoDef.png
-/Welcome.png
+/MuroPiedras.png
+/book.png
+/consoles.png
+/games.png
+/home.png
+/settings.png
+/thumbs.png
 /proyecto/
-/LetrasHistoria.png
