Modelo,Vista,Controlador

--- a/ProyectoInicial/bin/.gitignore
+++ b/ProyectoInicial/bin/.gitignore
@@ -1,8 +1,15 @@
+/Fondo.png
+/LetrasHistoria.png
+/LogoDef.png
 /MuroPiedras.png
+/Welcome.png
+/bar.png
 /book.png
 /consoles.png
 /games.png
 /home.png
-/settings.png
-/thumbs.png
 /proyecto/
+/settings.png
+/controlador/
+/modelo/
+/vista/
